--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,7 @@ project(Node)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Node main.cpp)
+add_executable(Node main.cpp
+        Node.cpp
+        Node.h
+)
